full auth and functional website

--- a/main_app/templates/movie_detail.html
+++ b/main_app/templates/movie_detail.html
@@ -32,8 +32,12 @@
            <h3> <span> {{forloop.counter}}</span>
             <span><b>{{review.title}}</b></span>
             <span>{{review.rating}} % </span>
+       
+          
         </h3>
             <span><b>{{review.reason}}</b></span>
+            <br>
+            - User: {{review.user.username}}
         </div>
         {% empty %}
         <p> No Reviews Available</p>
