--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,19 +24,23 @@
                 </a>
             </div>
             <div class="navbar-menu navbar-start">
-                <a class="navbar-item" href="/movies">Categories</a>
+               
             </div>
             <div class="navbar-menu navbar-end">
-                <a class="navbar-item" href="/movies/new">Add Movie</a>
+               
             </div>
             {% if user.is_authenticated %}
                 <div class="navbar-menu navbar-end">
+                    <a class="navbar-item" href="/movies/new">Add Movie</a>
+                    <a class="navbar-item" href="/movies">Categories</a>
                     <span class="navbar-item">Welcome: {{user.username}}</span>
                     <a class="navbar-item" href="{% url 'logout' %}">Logout</a>
                 </div>
             {% else %}
                 <div class="navbar-menu navbar-end">
+                    
                     <a class="navbar-item" href="{% url 'login' %}">Log In</a>
+                    <a class="navbar-item" href="{% url 'signup' %}">Sign Up</a>
                 </div>
             {% endif %}
         </nav>
