--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -16,7 +16,11 @@
             <a href="/list/{{list.pk}}" >
             <h3 class="title is-3 has-text-success">{{list.title}}</h3>
             </a>
-            
+            <a href="/list/{{list.id}}/delete" class="button is-danger">
+                <span class="icon">
+                    <i class="fas fa-trash-alt"></i>
+                </span>
+            </a>
             <span>
                 <div class="dropdown">
                   <div class="dropdown-trigger">
