--- a/main_app/templates/list_detail.html
+++ b/main_app/templates/list_detail.html
@@ -3,6 +3,7 @@
 
 
 <div >
+    
  <h1 class="list_title">{{list.title}}</h1>  
   {{list.title}}
   {% for movie in list.movies.all %}
@@ -31,10 +32,22 @@
       </a>
       
       {% endfor %}
+      
     </div>
+   
   </div>
+  <h3 class="title pt-5">Do you want to Delete "{{list.title}} "?</h3>
+  <form method="post">
+      {% csrf_token %}
+      <div class="buttons">
+      <!-- confirm list delete -->
+          <input class="button is-danger" type="submit" value="Confirm" />
+          <!-- Redirect back to detail on cancel -->
+          <a class="button is-primary" href="{% url 'list_detail' list.pk %}">Cancel</a>
+      </div>
+  </form>
 </div>
-</div>
+
 
 
 {% endblock %}
